--- a/02_navbar/css/styles.css
+++ b/02_navbar/css/styles.css
@@ -3,29 +3,105 @@
     font-family: 'Montserrat', sans-serif;
 
 }
-/* NAVBAR */
+
 .bg-primary-color
 {
     background: #0B1F3B;
 }
-/* Centralizando itens */
 
-#navbar_it .navbar-nav
+.logo1
 {
+    position:static;
+    margin-top: -3%;
+    margin-left: 40%;
+}
+
+.nav-itens .navbar-nav
+{
+    margin-top: 8em;
     display: flex;
     justify-content: center;
-    width: 100%; 
-    margin-top: 7em;
-
+    /* width: 30%;  */
 }
+
+/* Pesquisa------------------------------------------------------------------------------- */
+.pesq
+{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    width: 80%;
+}
+
+.pesq .caixa-pesquisa
+{
+    box-sizing: border-box;
+    display: flex;
+    width: 200%;
+    max-width: 300%;
+    border: solid 1px  #FF0000;
+    text-align:justify;
+}
+
+.botao
+{
+   position:static;
+   margin-left: 205%;
+   margin-top: -26%;
+   color: #fff;
+}
+
+
+
+@media(max-width: 768px)
+{
+    .pesq
+    {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    width: 80%;
+    }
+
+    .pesq .caixa-pesquisa
+    {
+        box-sizing: border-box;
+        width: 150%;
+        max-width: 150%;
+    }
+    .botao
+    {
+        position:static;
+        margin-left: 150%;
+        margin-top: -27%;
+    }
+}
+/* --------------------------------------------------------------------------------------- */
+
 
 .item_nav .itemDaNav
 {
     font-weight: bold;
-    font-size: 1.1em;
+    margin-right: 4em;
 }
 
-.item_nav a:hover
+.itemDaNav:hover
 {
-    text-decoration:underline red;
+    text-decoration: solid 2px underline #FF0000;
 }
+
+.dropdown-menu
+{
+    background: #0F0D0D;
+}
+
+.dropdown-menu .dropdown-item
+{
+    color: #fff;
+}
+
+.dropdown-menu .dropdown-divider
+{
+    background: #fff;
+}
+
